# esp-matter-deadbolt

./: .deadbolt_api_test_env.sh  .deadbolt_api_test_repl.sh  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  deadbolt_api_test  flash_remote.sh  run_esp32-s3  sdkconfig.defaults
.claude/skills/deploy/: SKILL.md
.github/workflows/: build.yml
docs/: 2026-03-30_00_README.md  2026-03-31_implementation_changes.md  API_SPECIFICATION.md  hardware_test_checklist.md
main/: CMakeLists.txt  app_main.cpp  ble_server.cpp  ble_server.h  comm_layer.cpp  comm_layer.h  door_controller.cpp  door_controller.h  hal_gpio.cpp  hal_gpio.h  status_led.cpp  status_led.h
scripts/: run.sh
